--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
-    "build": "webpack.js",
+    "build": "./node_modules/webpack/bin/webpack.js",
     "test": "mocha --require test/helpers/setup.js"
   },
   "repository": {
